trying to fix center align issue

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,14 @@
 }
 
  a, a:hover, a:focus, a:active {
-      margin:0 auto;    
-      display:block;
       text-decoration: none;
       color: blue;
  }
+
+.content-creators {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
   
